<resources>
    <string name="app_name">URBAN HOUSE</string>
    <string name="str_login">Login</string>
    <string name="str_user_name">User Name</string>
    <string name="str_edit_profile">Edit Profile</string>
    <string name="str_EMAIL">EMAIL</string>
    <string name="str_PASS">PASSWORD</string>
    <string name="str_SIGNUP">SIGN UP</string>
    <string name="str_for_pass">FORGOT\nPASSWORD?</string>
    <string name="str_for_password">Forgot Password?</string>
    <string name="str_desc_reset_pw">if you need help to resetting your password \n we can help by sending you a link to reset it.</string>
    <string name="hint_mobile">+91 9876543210</string>
    <string name="str_continue">CONTINUE</string>
    <string name="str_otp_verification">OTP verification</string>
    <string name="str_name">NAME</string>
    <string name="str_surname">SURNAME</string>
    <string name="str_repeat_pass">REPEAT PASSWORD</string>
    <string name="str_reset_pass">RESET PASSWORD</string>
    <string name="str_val">OTP VALIDATION</string>
    <string name="str_price">Rs. 799</string>
    <string name="str_tocart">ADD TO CART</string>
    <string name="str_home">Home</string>
    <string name="str_Categories">Categories</string>
    <string name="str_More">More</string>
    <string name="str_Profile">Profile</string>
    <string name="str_my_acc">My Account</string>
    <string name="str_setting">Setting</string>
    <string name="str_logout">Logout</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="beardo">Beardo</string>
    <string name="str_caffeine">Caffeine</string>
    <string name="str_campus">Campus</string>
    <string name="str_adidas">Adidas</string>
    <string name="str_ocean">Ocean</string>
    <string name="ustra">Ustra</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_slamdunk_deals">Slamdunk Deals</string>
    <string name="str_Fragrance">Fragrance</string>
    <string name="str_footwear">Footwear</string>
    <string name="str_watches">Watches</string>
    <string name="str_topwear">Top Wear</string>


    <string name="google">Google LLC is an American multinational technology company focusing on online advertising, search engine technology, cloud computing, computer software, quantum computing, e-commerce, artificial intelligence, and consumer electronics.</string>
</resources>