<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SignupActivity"
    android:background="@drawable/bg_background">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:padding="@dimen/dimen_30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_name"
        android:textSize="@dimen/dimen_14dp"
        android:textColorHint="@color/edit_txt_color"
        android:layout_marginHorizontal="@dimen/dimen_30dp"
        app:layout_constraintTop_toBottomOf="@id/back"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:paddingBottom="@dimen/dimen_20dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_txt_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_surname"
        android:textSize="@dimen/dimen_14dp"
        android:textColorHint="@color/edit_txt_color"
        android:layout_marginHorizontal="@dimen/dimen_30dp"
        app:layout_constraintTop_toBottomOf="@id/ed_txt_name"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:paddingBottom="@dimen/dimen_20dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_txt_signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_EMAIL"
        android:textSize="@dimen/dimen_14dp"
        android:textColorHint="@color/edit_txt_color"
        android:layout_marginHorizontal="@dimen/dimen_30dp"
        app:layout_constraintTop_toBottomOf="@id/ed_txt_surname"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:paddingBottom="@dimen/dimen_20dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_txt_signup_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_PASS"
        android:textSize="@dimen/dimen_14dp"
        android:textColorHint="@color/edit_txt_color"
        android:layout_marginHorizontal="@dimen/dimen_30dp"
        app:layout_constraintTop_toBottomOf="@id/ed_txt_signup_email"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:paddingBottom="@dimen/dimen_20dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_txt_repeat_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_repeat_pass"
        android:textSize="@dimen/dimen_14dp"
        android:textColorHint="@color/edit_txt_color"
        android:layout_marginHorizontal="@dimen/dimen_30dp"
        app:layout_constraintTop_toBottomOf="@id/ed_txt_signup_pass"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:paddingBottom="@dimen/dimen_20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60dp"
        android:text="@string/str_SIGNUP"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:alpha="0.4"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintTop_toBottomOf="@id/ed_txt_repeat_pass"/>

</androidx.constraintlayout.widget.ConstraintLayout>