<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/imgdetail"
            android:layout_width="@dimen/dimen_120dp"
            android:layout_height="@dimen/dimen_120dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:padding="@dimen/dimen_10dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtdetail"
            android:textSize="@dimen/dimen_20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_name"
            android:layout_gravity="center"
            android:padding="@dimen/dimen_10dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_price"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:background="@drawable/bg_edit_text"
            android:textColor="@color/black"
            android:text="@string/str_tocart"
            android:layout_marginHorizontal="@dimen/dimen_10dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>
