<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_background"
    tools:context=".ui.activity.LoginActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:padding="@dimen/dimen_30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_EMAIL"
        android:textSize="@dimen/dimen_14dp"
        android:textColorHint="@color/edit_txt_color"
        android:autofillHints="emailAddress"
        android:textAlignment="center"
        android:padding="@dimen/dimen_20dp"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginEnd="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_150dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_txt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_14dp"
        android:hint="@string/str_PASS"
        android:textColorHint="@color/edit_txt_color"
        android:autofillHints="emailAddress"
        android:textAlignment="center"
        android:padding="@dimen/dimen_20dp"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginEnd="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_26dp"
        app:layout_constraintTop_toBottomOf="@id/ed_txt_email"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60dp"
        android:backgroundTint="@color/black"
        android:alpha="0.4"
        android:textColor="@color/white"
        android:text="@string/str_login"
        app:layout_constraintTop_toBottomOf="@id/ed_txt_pass"
        android:layout_marginTop="@dimen/dimen_26dp"
        android:layout_marginHorizontal="@dimen/dimen_20dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_for_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_for_pass"
        android:textColor="@color/for_pass_color"
        android:textSize="@dimen/dimen_14dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginStart="@dimen/dimen_30dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_SIGNUP"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_14dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:layout_marginTop="@dimen/dimen_14dp"
        android:layout_marginEnd="@dimen/dimen_30dp"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>