<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/product_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_120dp"
            android:src="@drawable/img6"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/product_img"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16dp"
            android:text="@string/str_Fragrance"
            android:layout_marginTop="@dimen/dimen_6dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ustra"
            android:textSize="@dimen/dimen_12dp"
            android:textColor="@color/edit_txt_color"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            app:layout_constraintTop_toBottomOf="@id/product_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_price"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/product_desc"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_6dp"/>

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/ic_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_favorite_border_24"
            app:layout_constraintTop_toBottomOf="@id/product_img"
            android:layout_marginTop="@dimen/dimen_12dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="@dimen/dimen_20dp"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>