<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg_color"
    tools:context=".ui.HomeFragment">
    <include layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <include layout="@layout/activity_horizontal_scroll_view"
        android:id="@+id/scroll_view"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dimen_62dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_deals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_slamdunk_deals"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_14dp"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintTop_toBottomOf="@id/scroll_view"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/fst_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintTop_toBottomOf="@id/txt_deals">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_200dp"
                android:src="@drawable/img6"
                android:layout_weight="1"/>

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_200dp"
                android:src="@drawable/img7"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/sec_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/fst_linearlayout">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="@dimen/dimen_20dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/beardo"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ustra"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_20dp"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/third_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintTop_toBottomOf="@id/sec_linearlayout">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_200dp"
                android:src="@drawable/img5"
                android:gravity="center"
                android:layout_weight="1"/>

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_200dp"
                android:src="@drawable/img10"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/fourth_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/third_linearlayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="@dimen/dimen_20dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/str_campus"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_adidas"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_20dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/fifth_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintTop_toBottomOf="@id/fourth_linearlayout">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_200dp"
                android:src="@drawable/img9"
                android:layout_weight="1"/>

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_200dp"
                android:src="@drawable/img8"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/sixth_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/fifth_linearlayout">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="@dimen/dimen_20dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/str_caffeine"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_ocean"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_20dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>
